--- a/src/views/allCharacters.ejs
+++ b/src/views/allCharacters.ejs
@@ -132,7 +132,7 @@ background-color: #7e0000;
     </div>
     <div class="container">
       
-      <a href="/adicionar-personagem" class="btn-adicionar">Adicionar Personagem</a>
+      <a href="/addCharacter" class="btn-adicionar">Adicionar Personagem</a>
 
 <% if (characters && characters.length > 0) { %>
           <table>
