--- a/src/views/errorPage.ejs
+++ b/src/views/errorPage.ejs
@@ -6,9 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Error Page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-      </head>
+    <style>
+        #bno{
+            zoom:85%;
+                }
+
+    </style>  
+    </head>
 <body>
-    <div class="d-flex align-items-center justify-content-center vh-100 bg-primary">
+    <div class="d-flex align-items-center justify-content-center vh-100 bg-primary" id="bno">
         <h1 class="display-1 fw-bold text-white"> <%= err.error %></h1>
     </div>
  
