--- a/src/views/errorPage.ejs
+++ b/src/views/errorPage.ejs
@@ -16,14 +16,10 @@
 <body>
     <div class="d-flex align-items-center justify-content-center vh-100 bg-primary" id="bno">
         <h1 class="display-1 fw-bold text-white"> <%= err.error %></h1>
+ <a href="/">GO home</a>
     </div>
  
 </body>
-<script>
-    // Redirecionar para a página inicial após 5 segundos
-    setTimeout(function () {
-      window.location.href = '/';
-    }, 3000); 
-  </script>
+
 </html>
 
