--- a/src/views/editCharacters.ejs
+++ b/src/views/editCharacters.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Personagem</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,6 +65,12 @@
     </style>
 </head>
 <body>
+    <% if (typeof error !== 'undefined') { %>
+<div class="alert alert-danger" role="alert">
+          <%= error %>
+        </div>
+      <% } %>
+
     <div class="container">
         <div class="character-info">
             <h2>Editar Personagem</h2>
