--- a/src/views/errorPage.ejs
+++ b/src/views/errorPage.ejs
@@ -7,7 +7,7 @@
         <title>Error Page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        #bno{
+        body{
             zoom:85%;
                 }
 
@@ -15,8 +15,10 @@
     </head>
 <body>
     <div class="d-flex align-items-center justify-content-center vh-100 bg-primary" id="bno">
-        <h1 class="display-1 fw-bold text-white"> <%= err.error %></h1>
- <a href="/">GO home</a>
+        <h1 class="display-1 fw-bold text-white"> <%= err.error %> <a href="/" style="color: brown;">Go home page</a></h1>
+        <br>
+       
+
     </div>
  
 </body>
